Allows category sorting when one (and only one) category is selected in the search tools.

--- a/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -1,5 +1,5 @@
 ; @package My Books
-; @copyright Copyright (c) 2017 - 2019 Lucas Sanner
+; @copyright Copyright (c) 2019 - 2019 Lucas Sanner
 ; @license GNU General Public License version 3, or later
 
 COM_MYBOOKS_MENU="My Books"
@@ -17,7 +17,7 @@ COM_MYBOOKS_HEADING_CATEGORIES="Categories"
 COM_MYBOOKS_TITLE_ASC="Title ascending"
 COM_MYBOOKS_TITLE_DESC="Title descending"
 COM_MYBOOKS_SELECT_USER="- Select User -"
-COM_MYBOOKS_SELECT_MAIN_CATEGORY="- Select Main Category -"
+COM_MYBOOKS_ORDERING_DISABLED="Please sort by order then pick one (and only one) category to enable reordering"
 ;Book
 COM_MYBOOKS_NEW_BOOK="My Books - Add new book"
 COM_MYBOOKS_EDIT_BOOK="My Books - Edit book"
