--- a/administrator/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
@@ -17,6 +17,7 @@ COM_MYBOOKS_HEADING_CATEGORIES="Catégories"
 COM_MYBOOKS_TITLE_ASC="Titre ascendant"
 COM_MYBOOKS_TITLE_DESC="Titre descendant"
 COM_MYBOOKS_OPTION_SELECT_USER="- Sélectionner un utilisateur -"
+COM_MYBOOKS_ORDERING_DISABLED="Pour réordonner vous devez trier par ordre puis choisir une (et une seule) catégorie"
 ;Book
 COM_MYBOOKS_NEW_BOOK="My Books - Ajouter une book"
 COM_MYBOOKS_EDIT_BOOK="My Books - Editer une book"
