Modifies the frontend MySQL query to display items by taking into account the multicategory feature.

--- a/administrator/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
@@ -1,5 +1,5 @@
 ; @package My Books
-; @copyright Copyright (c) 2017 - 2019 Lucas Sanner
+; @copyright Copyright (c) 2019 - 2019 Lucas Sanner
 ; @license GNU General Public License version 3, or later
 
 COM_MYBOOKS_MENU="My Books"
@@ -66,7 +66,11 @@ COM_MYBOOKS_LINKED_NAME_DESC="Activer/Désactiver le lien sur le nom vers la boo
 COM_MYBOOKS_FIELD_SHOW_TAGS_LABEL="Afficher les tags."
 COM_MYBOOKS_FIELD_SHOW_TAGS_DESC="Afficher les tags d'une book."
 COM_MYBOOKS_SHOW_INTRO_DESC="Afficher/Masquer le texte d'introduction dans l'affichage complet des books."
-COM_MYBOOKS_SHOW_CATEGORY_DESC="Afficher/Masquer le titre de la catégorie de la book."
+COM_MYBOOKS_SHOW_CATEGORIES_LABEL="afficher les catégories"
+COM_MYBOOKS_SHOW_CATEGORIES_DESC="Afficher/Masquer les catégories liées au livre."
+COM_MYBOOKS_SHOW_CATEGORY_LABEL="Catégorie principale"
+COM_MYBOOKS_SHOW_CATEGORY_DESC="Afficher/Masquer le titre de la catégorie principale de la book."
+COM_MYBOOKS_LINK_CATEGORY_LABEL="Lien catégorie principale"
 COM_MYBOOKS_LINK_CATEGORY_DESC="Activer/Désactiver le lien sur le titre de la catégorie<br />vers l'affichage en liste de ses books."
 COM_MYBOOKS_SHOW_PARENT_CATEGORY_DESC="Afficher/Masquer le titre de la catégorie parente."
 COM_MYBOOKS_LINK_PARENT_CATEGORY_DESC="Activer/Désactiver le lien sur le titre de la catégorie parente<br />vers l'affichage en liste de ses books."
