--- a/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -1,5 +1,5 @@
 ; @package My Books
-; @copyright Copyright (c) 2017 - 2019 Lucas Sanner
+; @copyright Copyright (c) 2019 - 2019 Lucas Sanner
 ; @license GNU General Public License version 3, or later
 
 ;Categories
@@ -43,7 +43,7 @@ COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
 COM_MYBOOKS_FIELD_DESCRIPTION_DESC="The description of the book."
 COM_MYBOOKS_WRITTEN_BY="Written by: %s"
 COM_MYBOOKS_PARENT="Parent Category: %s"
-COM_MYBOOKS_CATEGORY="Category: %s"
+COM_MYBOOKS_MAIN_CATEGORY="Main Category: %s"
 COM_MYBOOKS_PUBLISHED_DATE_ON="Published: %s"
 COM_MYBOOKS_CREATED_DATE_ON="Created: %s"
 COM_MYBOOKS_LAST_UPDATED="Last Updated: %s"
