--- a/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
+++ b/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
@@ -1,5 +1,5 @@
 ; @package My Books
-; @copyright Copyright (c) 2017 - 2019 Lucas Sanner
+; @copyright Copyright (c) 2019 - 2019 Lucas Sanner
 ; @license GNU General Public License version 3, or later
 
 ;Categories
@@ -43,7 +43,7 @@ COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
 COM_MYBOOKS_FIELD_DESCRIPTION_DESC="La description de la book."
 COM_MYBOOKS_WRITTEN_BY="Créé par: %s"
 COM_MYBOOKS_PARENT="Categorie parente: %s"
-COM_MYBOOKS_CATEGORY="Catégorie: %s"
+COM_MYBOOKS_MAIN_CATEGORY="Catégorie principale: %s"
 COM_MYBOOKS_PUBLISHED_DATE_ON="Publié: %s"
 COM_MYBOOKS_CREATED_DATE_ON="Créé: %s"
 COM_MYBOOKS_LAST_UPDATED="Dernière modification: %s"
