--- a/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -70,8 +70,12 @@ COM_MYBOOKS_LINKED_NAME_DESC="If set to Yes, the book name will be linked to the
 COM_MYBOOKS_FIELD_SHOW_TAGS_LABEL="Show Tags"
 COM_MYBOOKS_FIELD_SHOW_TAGS_DESC="Show the tags for each book."
 COM_MYBOOKS_SHOW_INTRO_DESC="If set to Show, the Intro Text of the book will show when you drill down to the book. If set to Hide, only the part of the book after the "_QQ_"Read More"_QQ_" break will show."
-COM_MYBOOKS_SHOW_CATEGORY_DESC="If set to Show, the title of the book's category will show."
-COM_MYBOOKS_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to 'Show', the Category Title will link to a layout showing books in that Category."
+COM_MYBOOKS_SHOW_CATEGORIES_LABEL="Show Categories"
+COM_MYBOOKS_SHOW_CATEGORIES_DESC="If set to Show, all the categories linked to the book are show."
+COM_MYBOOKS_SHOW_CATEGORY_LABEL="Show Main Category"
+COM_MYBOOKS_SHOW_CATEGORY_DESC="If set to Show, the title of the book's main category will show."
+COM_MYBOOKS_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to 'Show', the Main Category Title will link to a layout showing books in that Category."
+COM_MYBOOKS_LINK_CATEGORY_LABEL="Link Main Category"
 COM_MYBOOKS_SHOW_PARENT_CATEGORY_DESC="If set to Show, the title of the book's parent category will show."
 COM_MYBOOKS_LINK_PARENT_CATEGORY_DESC="If set to Yes, and if Show Parent is set to 'Show', the Parent Category Title will link to a layout showing books in that Category."
 COM_MYBOOKS_SHOW_AUTHOR_DESC="If set to Show, the Name of the book's Author will be displayed. This is a global setting but can be changed at the Category, Menu and Book levels."
