Adds a system plugin to prevent main categories to be trashed or archived.

--- a/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -71,7 +71,7 @@ COM_MYBOOKS_FIELD_SHOW_TAGS_LABEL="Show Tags"
 COM_MYBOOKS_FIELD_SHOW_TAGS_DESC="Show the tags for each book."
 COM_MYBOOKS_SHOW_INTRO_DESC="If set to Show, the Intro Text of the book will show when you drill down to the book. If set to Hide, only the part of the book after the "_QQ_"Read More"_QQ_" break will show."
 COM_MYBOOKS_SHOW_CATEGORIES_LABEL="Show Categories"
-COM_MYBOOKS_SHOW_CATEGORIES_DESC="If set to Show, all the categories linked to the book are show."
+COM_MYBOOKS_SHOW_CATEGORIES_DESC="If set to Show, all the categories linked to the book are shown."
 COM_MYBOOKS_SHOW_CATEGORY_LABEL="Show Main Category"
 COM_MYBOOKS_SHOW_CATEGORY_DESC="If set to Show, the title of the book's main category will show."
 COM_MYBOOKS_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to 'Show', the Main Category Title will link to a layout showing books in that Category."
