Modifies the way to get the current protocol and domain name when building the canonical url.

--- a/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -28,7 +28,7 @@ COM_MYBOOKS_FIELD_NAME_DESC="Name of the book."
 COM_MYBOOKS_FIELD_CATEGORIES_LABEL="Categories"
 COM_MYBOOKS_FIELD_CATEGORIES_DESC="The categories that this item is assigned to."
 COM_MYBOOKS_FIELD_MAIN_CATEGORY_LABEL="Main category"
-COM_MYBOOKS_FIELD_MAIN_CATEGORY_DESC="The main category of this item."
+COM_MYBOOKS_FIELD_MAIN_CATEGORY_DESC="The main category of this item. This category will be used to set the canonical url of this item."
 COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
 COM_MYBOOKS_FIELD_DESCRIPTION_DESC="Description of the book."
 COM_MYBOOKS_OPTION_SELECT="- Select -"
