--- a/administrator/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
@@ -25,6 +25,10 @@ COM_MYBOOKS_TAB_DETAILS="Détails"
 COM_MYBOOKS_FIELD_TITLE_DESC="Titre de la book."
 COM_MYBOOKS_FIELD_NAME_LABEL="Nom"
 COM_MYBOOKS_FIELD_NAME_DESC="Nom de la book."
+COM_MYBOOKS_FIELD_CATEGORIES_LABEL="Catégories"
+COM_MYBOOKS_FIELD_CATEGORIES_DESC="Les catégories assignées à cet item."
+COM_MYBOOKS_FIELD_MAIN_CATEGORY_LABEL="Categorie principale"
+COM_MYBOOKS_FIELD_MAIN_CATEGORY_DESC="La categorie principale de cet item. Cette catégorie sera utilisée pour définir l'url canonique de cet item."
 COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
 COM_MYBOOKS_FIELD_DESCRIPTION_DESC="Description de la book."
 COM_MYBOOKS_OPTION_SELECT="- Sélectionner -"
