Replaces the "author" label with "creator" which is more global.

--- a/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -16,6 +16,8 @@ COM_MYBOOKS_BOOKS_TITLE="My Books - Books"
 COM_MYBOOKS_HEADING_CATEGORIES="Categories"
 COM_MYBOOKS_TITLE_ASC="Title ascending"
 COM_MYBOOKS_TITLE_DESC="Title descending"
+COM_MYBOOKS_CREATOR_ASC="Creator ascending"
+COM_MYBOOKS_CREATOR_DESC="Creator descending"
 COM_MYBOOKS_SELECT_USER="- Select User -"
 COM_MYBOOKS_ORDERING_DISABLED="Please sort by order then pick one (and only one) category to enable reordering"
 ;Book
@@ -78,7 +80,8 @@ COM_MYBOOKS_LINK_CATEGORY_DESC="If set to Yes, and if Show Category is set to 'S
 COM_MYBOOKS_LINK_CATEGORY_LABEL="Link Main Category"
 COM_MYBOOKS_SHOW_PARENT_CATEGORY_DESC="If set to Show, the title of the book's parent category will show."
 COM_MYBOOKS_LINK_PARENT_CATEGORY_DESC="If set to Yes, and if Show Parent is set to 'Show', the Parent Category Title will link to a layout showing books in that Category."
-COM_MYBOOKS_SHOW_AUTHOR_DESC="If set to Show, the Name of the book's Author will be displayed. This is a global setting but can be changed at the Category, Menu and Book levels."
+COM_MYBOOKS_SHOW_CREATOR_LABEL="Show Creator"
+COM_MYBOOKS_SHOW_CREATOR_DESC="If set to Show, the Name of the book's creator will be displayed. This is a global setting but can be changed at the Category, Menu and Book levels."
 COM_MYBOOKS_SHOW_CREATE_DATE_DESC="If set to Show, the date and time an Book was created will be displayed. This a global setting but can be changed at Menu and Book levels."
 COM_MYBOOKS_SHOW_MODIFY_DATE_DESC="If set to Show, the date and time an Book was last modified will be displayed. This is a global setting but can be changed at the Category, Menu and Book levels."
 COM_MYBOOKS_SHOW_PUBLISH_DATE_DESC="If set to Show, the date and time an Book was published will be displayed. This is a global setting but can be changed at the Category, Menu and Book levels."
@@ -117,7 +120,6 @@ COM_MYBOOKS_NUMBER_ITEMS_DISPLAY_DESC="Default number of books to display on a p
 COM_MYBOOKS_CONFIG_LIST_SETTINGS_DESC="These settings apply for List Layouts Options unless they are changed for a specific menu item or category."
 COM_MYBOOKS_SHOW_DATE_DESC= "Whether to show a date column in the list of books. Select Hide to hide the date, or select which date you wish to show."
 COM_MYBOOKS_SHOW_HITS_DESC="Whether to show book hits in the list of books."
-COM_MYBOOKS_SHOW_AUTHORS_DESC="Whether to show book authors in the list of books."
 COM_MYBOOKS_SHARED_LABEL="Shared Options"
 COM_MYBOOKS_SHARED_DESC="These settings apply for Shared Options in List and Blog unless they are changed by the menu settings."
 COM_MYBOOKS_SHOW_SORTING_FILTER_LABEL="Sorting Filter"
@@ -135,12 +137,14 @@ COM_MYBOOKS_FIELD_SELECT_BOOK_LABEL="Select Book"
 COM_MYBOOKS_FIELD_SELECT_BOOK_DESC="Select the desired book from the list."
 COM_MYBOOKS_SELECT_A_BOOK="Select a Book"
 COM_MYBOOKS_CHANGE_BOOK="Select or Change book."
-COM_MYBOOKS_FIELD_SHOW_AUTHOR_LABEL="Show Author"
-COM_MYBOOKS_FIELD_SHOW_AUTHOR_DESC="Whether to show book author in the list of books."
+COM_MYBOOKS_SHOW_CREATOR_DESC="Whether to show book creator in the list of books."
 COM_MYBOOKS_TITLE_ALPHABETICAL="Title Alphabetical"
 COM_MYBOOKS_TITLE_REVERSE_ALPHABETICAL="Title Reverse Alphabetical"
 COM_MYBOOKS_NAME_ALPHABETICAL="Name Alphabetical"
 COM_MYBOOKS_NAME_REVERSE_ALPHABETICAL="Name Reverse Alphabetical"
+COM_MYBOOKS_CREATOR_ALPHABETICAL="Creator Alphabetical"
+COM_MYBOOKS_CREATOR_REVERSE_ALPHABETICAL="Creator Reverse Alphabetical"
+COM_MYBOOKS_CREATOR_TITLE="Creator"
 COM_MYBOOKS_ACCESS_DELETE_DESC="Delete New setting for <strong>delete actions</strong> on this book and the calculated setting based on the parent category and group permissions."
 COM_MYBOOKS_ACCESS_EDIT_DESC="Edit New setting for <strong>edit actions</strong> on this book and the calculated setting based on the parent category and group permissions."
 COM_MYBOOKS_ACCESS_EDITSTATE_DESC="Edit State New setting for <strong>edit state actions</strong> on this book and the calculated setting based on the parent category and group permissions."
