--- a/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -9,7 +9,7 @@ COM_MYBOOKS_NUM_BOOKS="Number of books"
 COM_MYBOOKS_FILTER_SEARCH_DESC="Apply filter to the book search"
 COM_MYBOOKS_TITLE_FILTER_LABEL="Title filter"
 COM_MYBOOKS_NAME_FILTER_LABEL="Name filter"
-COM_MYBOOKS_AUTHOR_FILTER_LABEL="Author filter"
+COM_MYBOOKS_CREATOR_FILTER_LABEL="Creator filter"
 COM_MYBOOKS_NO_BOOKS="No books"
 COM_MYBOOKS_FILTER_BY="Filter by"
 COM_MYBOOKS_ORDERING_ORDERING_ASC="Order ascending"
@@ -18,8 +18,8 @@ COM_MYBOOKS_ORDERING_TITLE_ASC="Title ascending"
 COM_MYBOOKS_ORDERING_TITLE_DESC="Title descending"
 COM_MYBOOKS_ORDERING_NAME_ASC="Name ascending"
 COM_MYBOOKS_ORDERING_NAME_DESC="Name descending"
-COM_MYBOOKS_ORDERING_AUTHOR_ASC="Author ascending"
-COM_MYBOOKS_ORDERING_AUTHOR_DESC="Author descending"
+COM_MYBOOKS_ORDERING_CREATOR_ASC="Creator ascending"
+COM_MYBOOKS_ORDERING_CREATOR_DESC="Creator descending"
 COM_MYBOOKS_ORDERING_DATE_ASC="Date ascending"
 COM_MYBOOKS_ORDERING_DATE_DESC="Date descending"
 COM_MYBOOKS_ORDERING_HITS_ASC="Hits ascending"
@@ -37,8 +37,6 @@ COM_MYBOOKS_TAB_METADATA="Metadata"
 COM_MYBOOKS_FIELD_TITLE_DESC="Title of the book."
 COM_MYBOOKS_FIELD_NAME_LABEL="Name"
 COM_MYBOOKS_FIELD_NAME_DESC="Name of the book."
-COM_MYBOOKS_FIELD_AUTHOR_LABEL="Author"
-COM_MYBOOKS_FIELD_AUTHOR_DESC="The author of the book."
 COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
 COM_MYBOOKS_FIELD_DESCRIPTION_DESC="The description of the book."
 COM_MYBOOKS_WRITTEN_BY="Written by: %s"
