--- a/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
+++ b/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
@@ -9,7 +9,7 @@ COM_MYBOOKS_NUM_BOOKS="Nombre de books"
 COM_MYBOOKS_FILTER_SEARCH_DESC="Appliquer le filtre sur la recherche de books"
 COM_MYBOOKS_TITLE_FILTER_LABEL="Filtrer le titre"
 COM_MYBOOKS_NAME_FILTER_LABEL="Filtrer le nom"
-COM_MYBOOKS_AUTHOR_FILTER_LABEL="Filtrer l'auteur"
+COM_MYBOOKS_CREATOR_FILTER_LABEL="Filtrer le créateur"
 COM_MYBOOKS_NO_BOOKS="Aucune book"
 COM_MYBOOKS_FILTER_BY="Filtrer par"
 COM_MYBOOKS_ORDERING_ORDERING_ASC="Ordre ascendant"
@@ -18,8 +18,8 @@ COM_MYBOOKS_ORDERING_TITLE_ASC="Titre ascendant"
 COM_MYBOOKS_ORDERING_TITLE_DESC="Titre descendant"
 COM_MYBOOKS_ORDERING_NAME_ASC="Nom ascendant"
 COM_MYBOOKS_ORDERING_NAME_DESC="Nom descendant"
-COM_MYBOOKS_ORDERING_AUTHOR_ASC="Auteur ascendant"
-COM_MYBOOKS_ORDERING_AUTHOR_DESC="Auteur descendant"
+COM_MYBOOKS_ORDERING_CREATOR_ASC="Créateur ascendant"
+COM_MYBOOKS_ORDERING_CREATOR_DESC="Créateur descendant"
 COM_MYBOOKS_ORDERING_DATE_ASC="Date ascendant"
 COM_MYBOOKS_ORDERING_DATE_DESC="Date descendant"
 COM_MYBOOKS_ORDERING_HITS_ASC="Affichage ascendant"
@@ -37,8 +37,6 @@ COM_MYBOOKS_TAB_METADATA="Metadata"
 COM_MYBOOKS_FIELD_TITLE_DESC="Titre de la book."
 COM_MYBOOKS_FIELD_NAME_LABEL="Nom"
 COM_MYBOOKS_FIELD_NAME_DESC="Nom de la book."
-COM_MYBOOKS_FIELD_AUTHOR_LABEL="Auteur"
-COM_MYBOOKS_FIELD_AUTHOR_DESC="L'auteur de la book."
 COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
 COM_MYBOOKS_FIELD_DESCRIPTION_DESC="La description de la book."
 COM_MYBOOKS_WRITTEN_BY="Créé par: %s"
