Fixes some french translations.

--- a/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
+++ b/components/com_mybooks/language/fr-FR/fr-FR.com_mybooks.ini
@@ -3,14 +3,14 @@
 ; @license GNU General Public License version 3, or later
 
 ;Categories
-COM_MYBOOKS_NUM_BOOKS="Nombre de books"
+COM_MYBOOKS_NUM_BOOKS="Nombre de livres"
 
 ;Category
-COM_MYBOOKS_FILTER_SEARCH_DESC="Appliquer le filtre sur la recherche de books"
+COM_MYBOOKS_FILTER_SEARCH_DESC="Appliquer le filtre sur la recherche de livres"
 COM_MYBOOKS_TITLE_FILTER_LABEL="Filtrer le titre"
 COM_MYBOOKS_NAME_FILTER_LABEL="Filtrer le nom"
 COM_MYBOOKS_CREATOR_FILTER_LABEL="Filtrer le créateur"
-COM_MYBOOKS_NO_BOOKS="Aucune book"
+COM_MYBOOKS_NO_BOOKS="Aucune livre"
 COM_MYBOOKS_FILTER_BY="Filtrer par"
 COM_MYBOOKS_ORDERING_ORDERING_ASC="Ordre ascendant"
 COM_MYBOOKS_ORDERING_ORDERING_DESC="Ordre descendant"
@@ -31,14 +31,14 @@ COM_MYBOOKS_TAG_NOT_FOUND="Tag non trouvé."
 COM_MYBOOKS_PUBLISHED_DATE="Date de publication"
 
 ;Book form
-COM_MYBOOKS_TAB_LINK_BOOK="Lier la book"
+COM_MYBOOKS_TAB_LINK_BOOK="Lier le livre"
 COM_MYBOOKS_TAB_PUBLISHING="Publication"
 COM_MYBOOKS_TAB_METADATA="Metadata"
-COM_MYBOOKS_FIELD_TITLE_DESC="Titre de la book."
+COM_MYBOOKS_FIELD_TITLE_DESC="Titre du livre."
 COM_MYBOOKS_FIELD_NAME_LABEL="Nom"
-COM_MYBOOKS_FIELD_NAME_DESC="Nom de la book."
+COM_MYBOOKS_FIELD_NAME_DESC="Nom du livre."
 COM_MYBOOKS_FIELD_DESCRIPTION_LABEL="Description"
-COM_MYBOOKS_FIELD_DESCRIPTION_DESC="La description de la book."
+COM_MYBOOKS_FIELD_DESCRIPTION_DESC="La description du livre."
 COM_MYBOOKS_WRITTEN_BY="Créé par: %s"
 COM_MYBOOKS_PARENT="Categorie parente: %s"
 COM_MYBOOKS_MAIN_CATEGORY="Catégorie principale: %s"
@@ -49,10 +49,10 @@ COM_MYBOOKS_BOOK_HITS="Affichages: %d"
 COM_MYBOOKS_EDIT="Editer"
 COM_MYBOOKS_CHECKED_OUT_BY="Verrouillé par %s"
 COM_MYBOOKS_FIELD_LANGUAGE_LABEL="Language"
-COM_MYBOOKS_FIELD_LANGUAGE_DESC="La langue à laquelle la book est assignée."
+COM_MYBOOKS_FIELD_LANGUAGE_DESC="La langue à laquelle le livre est assignée."
 COM_MYBOOKS_FIELD_ACCESS_LABEL="Accés"
 COM_MYBOOKS_TAB_DETAILS="Détails"
 COM_MYBOOKS_DEFAULT_PAGE_TITLE="My Books"
 COM_MYBOOKS_HEADING_CREATE_BY="Créé par"
-COM_MYBOOKS_DATABASE_ERROR_BOOK_UNIQUE_ALIAS="Une autre book dans cette catégorie a le même alias."
+COM_MYBOOKS_DATABASE_ERROR_BOOK_UNIQUE_ALIAS="Un autre livre dans cette catégorie a le même alias."
 
