Fixes MySQL install typo.

--- a/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
+++ b/administrator/components/com_mybooks/language/en-GB/en-GB.com_mybooks.ini
@@ -18,7 +18,7 @@ COM_MYBOOKS_TITLE_ASC="Title ascending"
 COM_MYBOOKS_TITLE_DESC="Title descending"
 COM_MYBOOKS_CREATOR_ASC="Creator ascending"
 COM_MYBOOKS_CREATOR_DESC="Creator descending"
-COM_MYBOOKS_SELECT_USER="- Select User -"
+COM_MYBOOKS_SELECT_CREATOR="- Select Creator -"
 COM_MYBOOKS_ORDERING_DISABLED="Please sort by order then pick one (and only one) category to enable reordering"
 ;Book
 COM_MYBOOKS_NEW_BOOK="My Books - Add new book"
